<resources>
    <string name="app_name">QuickFit</string>
    <string name="header1">Welcome !</string>
    <string name="header2">"This app allow you create sport activity "</string>
    <string name="header3">You can join existing groups, create and even chat You can join existing groups, create and even chat You can join existing groups, create and even chatYou can join existing groups, create</string>
    <string name="description1">It\'s time to keep fit</string>
    <string name="description2">"How ? By the QuickFit social network "</string>
    <string name="description3">This app allow you create social sport activity</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="mail_sent">Reset email sent</string>
    <string name="failure_task">Please try later</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="password_min">Password too short, enter minimum 6 characters!</string>
    <string name="sucess_Login">Successfully Login</string>
    <string name="sucess_register">Successfully register</string>
    <string name="invaild_password">Invaild Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_signup">Sign in \\ Sign up</string>
    <string name="email">Email</string>
    <string name="send_reset_mail">Send reset mail</string>
    <string name="Name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="take_photo">Take Photo</string>
    <string name="back">Back</string>
    <string name="finish">finish</string>
    <string name="or">Or</string>
    <string name="login_with">Login with</string>
    <string name="login_with_facebook_text">Login with Facebook</string>
    <string name="login_with_google_text">Login with Google</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="mismatch_password">Passwords are not the same</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_more">Settings</string>
    <string name="Title">Title</string>
    <string name="sub_title">Sub title</string>
    <string name="search_hint">Name, City, Overview, etc.</string>
    <string name="selcet_pref">"You must select at least one category "</string>
    <string name="Activity_full">Sorry the activity is full, Try again later</string>
    <string name="new_User">New User?</string>
    <string name="address">Address</string>
    <string name="login">Log In</string>
    <string name="my_activities">My Activities</string>
    <string name="nearby_activities">Nearby Activities</string>
    <string name="filter_cat">Filter categories</string>
    <string name="search">Search</string>
    <string name="chats">My Chats</string>
    <string name="edit_pref">Edit preferences</string>
    <string name="logout">Logout</string>
    <string name="save">Save profile</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="activity_name">Activity name</string>
    <string name="Israel">ישראל</string>
    <string name="activity_type">Activity type</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="save_activity">Save activity</string>
    <string name="notice">Notice! After changing any of settings you will sign out</string>
    <string name="Chat_Message">Chat Message</string>
    <string name="created_successfully">Created Successfully</string>
    <string name="searching">Searching...</string>
    <string name="Scheduled">Scheduled</string>
    <string name="Number_of_participants">Number of participants</string>
    <string name="confirming_arrival">Confirming arrival</string>
    <string name="chat">Chat</string>
    <string name="welcome">welcome</string>
    <string name="all_fields">Please fill all fields</string>
    <string name="Notification_enabled">Notification enabled</string>
    <string name="Notification_disabled">Notification disabled</string>
    <string name="please_wait">Please wait....</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>


</resources>
