<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/nav_more"
        app:showAsAction="ifRoom" />

</menu>