<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/top_action_bar"
        android:layout_alignParentTop="true"
        android:background="@color/primary_dark"
        android:elevation="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/heebo_bold_xml"
            android:text="@string/app_name"
            android:layout_centerInParent="true"
           />
    </RelativeLayout>



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/top_action_bar">


    <TextView
        android:id="@+id/title_my_activates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/my_activities"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/heebo_bold_xml"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title_my_activates"
        android:id="@+id/recycler_my_activitys">


    </android.support.v7.widget.RecyclerView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nearby_activities"
        android:layout_below="@+id/recycler_my_activitys"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:id="@+id/title_near_activates"
        android:fontFamily="@font/heebo_bold_xml"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title_near_activates"
        android:id="@+id/recycler_near_activates">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:backgroundTint="@color/primary_dark"
        android:src="@drawable/ic_add_black_24dp"/>


    <RelativeLayout
        android:id="@+id/home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_action_bar"
        android:layout_marginTop="-2dp">

    </RelativeLayout>




</RelativeLayout>
