<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#012348"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/runnig_background"/>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/location_photo"
            android:layout_width="106dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/pluse_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/done_animation"
            app:lottie_fileName="done.json"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"/>

        <!--  Name Label -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="#99FF"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:drawableStart="@drawable/person_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="10dp"
                android:inputType="textCapWords"
                android:hint="@string/Name" />
        </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <!-- Email Label -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="#99FF"
            app:cardCornerRadius="8dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_email"
                android:drawableStart="@drawable/email_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="#99FF"
            app:cardCornerRadius="8dp"
            android:layout_marginVertical="10dp"

            android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText
                    android:id="@+id/input_location"
                    android:drawableStart="@drawable/ic_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:id="@+id/location_btn"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_navigation" />



        </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!-- Password Label -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:cardBackgroundColor="#99FF"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:drawableStart="@drawable/lock_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"

                android:background="@color/transparent"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <!-- Password Label -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"

            app:cardBackgroundColor="#99FF"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/repeat_password"
                android:drawableStart="@drawable/lock_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:hint="@string/repeat_password"/>
        </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.chip.ChipGroup
                android:id="@+id/user_preferences"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

            <!--<view class="android.support.v7.widget.RecyclerView"-->
            <!--android:id="@+id/user_preferences"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->

            <!--</view>-->
        </LinearLayout>

        <!-- Signup Button -->
        <!--
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/camera_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/take_photo" />
        -->

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="24dp"

        >
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:background="@drawable/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:padding="12dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/create_account"/>
    </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>